--- a/BlindBoxShop.Application/Pages/Account/Shared/AccountLayout.razor
+++ b/BlindBoxShop.Application/Pages/Account/Shared/AccountLayout.razor
@@ -2,27 +2,11 @@
 @layout BlindBoxShop.Application.Components.Layout.MainLayout
 @inject NavigationManager NavigationManager
 
-@if (HttpContext is null)
-{
-    <p>Loading...</p>
-}
-else
-{
-    @Body
-}
+@Body
 
 @code {
     [CascadingParameter]
     private HttpContext? HttpContext { get; set; }
-
-    protected override void OnParametersSet()
-    {
-        if (HttpContext is null)
-        {
-            // If this code runs, we're currently rendering in interactive mode, so there is no HttpContext.
-            // The identity pages need to set cookies, so they require an HttpContext. To achieve this we
-            // must transition back from interactive mode to a server-rendered page.
-            NavigationManager.Refresh(forceReload: true);
-        }
-    }
+    
+    // Không có logic refresh nào ở đây nữa
 }
