--- a/BlindBoxShop.Application/Pages/Employee/ProductPage/ProductManagement.razor
+++ b/BlindBoxShop.Application/Pages/Employee/ProductPage/ProductManagement.razor
@@ -1,24 +1,23 @@
-﻿@page "/category"
+@page "/product-management"
 @attribute [StreamRendering]
 @rendermode InteractiveServer
 
-@using BlindBoxShop.Application.Pages.Employee.BlindBoxCategoryPage.Partials
+@using BlindBoxShop.Application.Pages.Employee.ProductPage.Partials
 
-<PageTitle>Category</PageTitle>
+<PageTitle>Product Management</PageTitle>
 
 <!-- Page Header -->
 <MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="mt-0 px-0">
     <MudPaper Elevation="0" Class="page-header" Style="background-color: var(--mud-palette-secondary);">
-        <MudText Typo="Typo.h3" Class="font-weight-bold mb-2">Category Management</MudText>
-        <MudText Typo="Typo.body1">Manage your product categories</MudText>
+        <MudText Typo="Typo.h3" Class="font-weight-bold mb-2">Manage Products</MudText>
+        <MudText Typo="Typo.body1">Create, edit, and remove skincare products</MudText>
     </MudPaper>
 </MudContainer>
 
 <MudContainer Class="mt-8 px-8 min-vh-100" MaxWidth="MaxWidth.ExtraExtraLarge">
     <MudStack>
         <MudPaper Class="pa-3">
-            <BlindBoxCategoryTable />
+            <ProductTable />
         </MudPaper>
     </MudStack>
-</MudContainer>
-
+</MudContainer> 
