--- a/BlindBoxShop.Application/Pages/Routes.razor
+++ b/BlindBoxShop.Application/Pages/Routes.razor
@@ -1,4 +1,5 @@
-﻿@using BlindBoxShop.Application.Pages.Account.Shared
+﻿@using Microsoft.AspNetCore.Components.Web
+@using BlindBoxShop.Application.Pages.Account.Shared
 
 <Router AppAssembly="typeof(Program).Assembly">
     <Found Context="routeData">
