finish home, blind box page, blind box detail

--- a/BlindBoxShop.Application/Components/Layout/MainLayout.razor
+++ b/BlindBoxShop.Application/Components/Layout/MainLayout.razor
@@ -47,8 +47,8 @@
     
     <MudSpacer />
     <MudButton Variant="Variant.Text" Color="Color.Inherit" Href="/" Class="mx-2">TRANG CHỦ</MudButton>
-    <MudButton Variant="Variant.Text" Color="Color.Inherit" Href="/shop" Class="mx-2">CỬA HÀNG</MudButton>
-    <MudButton Variant="Variant.Text" Color="Color.Inherit" Href="/sample-products" Class="mx-2">SẢN PHẨM MẪU</MudButton>
+    <MudButton Variant="Variant.Text" Color="Color.Inherit" Href="/physical-blindboxes" Class="mx-2">HỘP QUÀ VẬT LÝ</MudButton>
+    <MudButton Variant="Variant.Text" Color="Color.Inherit" Href="/openable-blindboxes" Class="mx-2">HỘP QUÀ ONLINE</MudButton>
     
     <AuthorizeView>
         <Authorized>
@@ -195,8 +195,4 @@
         border-radius: 8px;
     }
 </style>
-
-<!-- Find where the navigation links are -->
-<MudNavLink Href="/shop" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Store">Shop</MudNavLink>
-<MudNavLink Href="/sample-products" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Category">Sample Products</MudNavLink>
 
